# hello-world-api

./: Dockerfile  README.md  openapi_spec.json  pyproject.toml
app/: config.py  main.py
app/api/: routing.py
app/api/v1/: hello.py
app/lib/: exceptions.py
app/models/: hello.py
k8s/: deployments.yaml  destinationrules.yaml  gateway.yaml
tests/: __init__.py  conftest.py  openapi_spec.json
tests/endpoints/: test_hello.py
