[tool.poetry]
name = "hello-world-api"
version = "0.1.0"
description = "Simple hello world API"
authors = ["amar"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
fastapi = "0.105.0 "
uvicorn = "^0.22.0"
pydantic_settings = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-env = "^0.8.1"
httpx="*"

[tool.pytest.ini_options]
addopts="--color=yes --code-highlight=yes -vvv"
log_cli_level="debug"
env = [
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
